--- a/paper/supp/ref.bib
+++ b/paper/supp/ref.bib
@@ -42,6 +42,27 @@
   publisher={Public Library of Science}
 }
 
+@article{sinha2007cinteny,
+  title={Cinteny: flexible analysis and visualization of synteny and genome rearrangements in multiple organisms},
+  author={Sinha, Amit U and Meller, Jaroslaw},
+  journal={BMC bioinformatics},
+  volume={8},
+  number={1},
+  pages={82},
+  year={2007},
+  publisher={BioMed Central}
+}
+
+@article{cabanettes2018d,
+  title={D-GENIES: dot plot large genomes in an interactive, efficient and simple way},
+  author={Cabanettes, Flor{\'e}al and Klopp, Christophe},
+  journal={PeerJ},
+  volume={6},
+  pages={e4958},
+  year={2018},
+  publisher={PeerJ Inc.}
+}
+
 @online{web-smashpp,
   title={Smash++},
   author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
