--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -56,61 +56,62 @@
 
 \defaultLineSpace    		%%% Line spacing
 
-% \clearpage
-% \section{GGA 18 compared to MGA 20}
-% \begin{figure}[!h]
-%   \centering
-%   \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
-%   \caption{Pair-wise comparison of \textit{G. gallus} chromosome~18 and \textit{M. gallopavo} chromosome~20.
-%   (a)~Smash++, with k=14 and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
-%   (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight of~18692. Reverse complements are shown in lower level;
-%   (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in situ hybridization} (FISH) analysis. The box shows a local rearrangement;
-%   (d)~SynBrowser~\cite{lee2016synteny}, with the resolution --minimum size of a reference block-- of 150~Kb;
-%   (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
-%   \label{fig.supp.GGA18.MGA20}
-% \end{figure}
-
 \clearpage
-\section{GGA 14 compared to MGA 16}
+\section{GGA 18 compared to MGA 20}
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=.85\linewidth]{fig/GGA14_MGA16.pdf}
-  \caption{\textit{G. gallus} chromosome~14 compared to \textit{M. gallopavo} chromosome~16.
-   (a)~Smash++, employing an FCM and an STMM with k=14 and~5, respectively. The blocks smaller than 400~Kb are discarded;
-   (b)~progressiveMauve, with LCB weight of~27424;
-   (c)~adopted from \cite{zhang2011comparative}. The box shows an inversion rearrangement; 
-   (d)~SynBrowser, with the resolution of 150~Kb.
-  }
-  \label{fig.supp.GGA14.MGA16}
+  \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
+  \caption{Pair-wise comparison of \textit{G.~gallus} chromosome~18 and \textit{M.~gallopavo} chromosome~20.
+  (a)~Smash++, with $k=14$ and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
+  (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight of~18692. Reverse complements are shown in lower level;
+  (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in~situ hybridization} (FISH) analysis. The box shows a local rearrangement;
+  (d)~SynBrowser~\cite{lee2016synteny}, with the resolution --minimum size of a reference block-- of 150~Kb;
+  (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
+  \label{fig.supp.GGA18.MGA20}
 \end{figure}
+
+% \clearpage
+% \section{GGA 14 compared to MGA 16}
+% \begin{figure}[!h]
+%   \centering
+%   \includegraphics[width=.85\linewidth]{fig/GGA14_MGA16.pdf}
+%   \caption{\textit{G.~gallus} chromosome~14 compared to \textit{M.~gallopavo} chromosome~16.
+%    (a)~Smash++, employing an FCM and an STMM with k=14 and~5, respectively. The blocks smaller than 400~Kb are discarded;
+%    (b)~progressiveMauve, with LCB weight of~27424;
+%    (c)~adopted from \cite{zhang2011comparative}. The box shows an inversion rearrangement; 
+%    (d)~SynBrowser, with the resolution of 150~Kb.
+%   }
+%   \label{fig.supp.GGA14.MGA16}
+% \end{figure}
 
 % \clearpage
 % \section{HS 12 compared to PT 12}
 % \begin{figure}[!h]
 %   \centering
-%   \includegraphics[width=.85\linewidth]{fig/HS12_PT12.pdf}
-%   \caption{
-%   (a)
-%   ;
-%   (b)
-%   adopted from \cite{}.
-%   ;
-%   (c)
-%   SynBrowser
-%   ;
-%   (d)
+%   \includegraphics[width=.75\linewidth]{fig/HS12_PT12.pdf}
+%   \caption{Comparison of \textit{H.~sapiens} chromosome~12 and \textit{P.~troglodytes} chromosome~12.
+%    (a)~Smash++, with k=14 used by an FCM. The blocks smaller than 100~Kb are discarded;
+%    (b)~progressiveMauve, with LCB weight of~55186;
+%    (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block$=$1~Kb, maximum gap between adjacent markers$=$5~Mb and minimum number of markers$=$1;
+%    (d)~SynBrowser, with the resolution of 150~Kb;
+%    (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
 %   }
-%   % \label{fig.schema}
+%   \label{fig.supp.HS12.PT12}
 % \end{figure}
 
 % \clearpage
-% \section{PXO99\textsuperscript{A} compared to MAFF 311018}
+% \section{PXO99A compared to MAFF 311018}
 % \begin{figure}[!h]
 %   \centering
 %   \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
-%   \caption{adopted from \cite{salzberg2008genome}.
-%     Inversions and rearrangements in PXO99A compared to MAFF. The alignment shows regions of PXO99A that align to the same (red) or opposite (blue) strand of MAFF. Transposase genes and their orientation (+ or -) are shown at the sites of each rearrangement. Letters A-J indicate specific rearrangement events. A: the IS element ISXoo3 is composed of two distinct and independently conserved ORFs and is responsible for an inversion spanning coordinates 267869–5114959 (all coordinates refer to the PXO99A genome). B: ISXo8 occurs in opposite orientation at each end of a 2.6 Mbp inversion spanning positions 1356757–3898472. C: ISXo1 occurs in inverted copies at the endpoints of a 1.8 Mbp inversion spanning 1558996–3391786. D: a 33270 bp inverted region spanning 4394742–4428012 is flanked by oppositely-oriented copies of ISXo8. E: Each copy of the 212-kb duplication is flanked by ISXo5, which also occurs adjacent to two other translocations in this region. The duplication appears as two parallel diagonal lines in this box. F: ISXo8 also occurs in inverted copies at the boundaries of a 47540 bp segment that is translocated from approximately 4800000 to 685272. G: ISXoo3 flanks both ends of a 47540 bp translocation from approximately 1117000 to 4339239. H: A 9,862 bp region occurs in inverted copies at 217,455 and 4,305,307. MAFF311018 contains only one copy of this region. I,J: Segments spanning 96,753 bp (I) and 17,021 bp (J) are inverted with respect to MAFF311018 but not associated with transposases.}
-%   % \label{fig.schema}
+%     \caption{Pair-wise comparison of PXO99A and MAFF 311018.
+%      (a)~Smash++, with k=13 used by an FCM. The blocks smaller than 10~Kb are discarded. In order to make the figure clearer, the shaded paths for connecting corresponding regions are not drawn;
+%     %  (b)~progressiveMauve, with LCB weight of~55186;
+%     %  (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block$=$1~Kb, maximum gap between adjacent markers$=$5~Mb and minimum number of markers$=$1;
+%     %  (d)~SynBrowser, with the resolution of 150~Kb;
+%     %  (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
+%     }
+%     \label{fig.supp.PXO99A.MAFF_311018}
 % \end{figure}
 
 % \clearpage
