--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -35,24 +35,24 @@
 
 \begin{document}
 
-%%% Title page
-\begin{titlepage}
-  \centering
-  \vspace*{10mm}
-  % \includegraphics[width=2.8cm]{logo.png} \\[10mm]
-  \Large\textsc{Supplementary Material for} \\[5mm]
-  \huge\textbf{Smash++: finding rearrangements} \\[12mm]
-  \Large Morteza Hosseini\textsuperscript{1}, Diogo Pratas\textsuperscript{1,2}, Armando J. Pinho\textsuperscript{1} \\[6mm]
-  \normalsize \textsuperscript{1}IEETA/DETI, University of Aveiro, Portugal \\[1mm]
-  \textsuperscript{2}Department of Virology, University of Helsinki, Finland \\[4mm]
-  {\ttfamily\{seyedmorteza,pratas,ap\}@ua.pt}
+% %%% Title page
+% \begin{titlepage}
+%   \centering
+%   \vspace*{10mm}
+%   % \includegraphics[width=2.8cm]{logo.png} \\[10mm]
+%   \Large\textsc{Supplementary Material for} \\[5mm]
+%   \huge\textbf{Smash++: finding rearrangements} \\[12mm]
+%   \Large Morteza Hosseini\textsuperscript{1}, Diogo Pratas\textsuperscript{1,2}, Armando J. Pinho\textsuperscript{1} \\[6mm]
+%   \normalsize \textsuperscript{1}IEETA/DETI, University of Aveiro, Portugal \\[1mm]
+%   \textsuperscript{2}Department of Virology, University of Helsinki, Finland \\[4mm]
+%   {\ttfamily\{seyedmorteza,pratas,ap\}@ua.pt}
   
-  \vspace{\fill}
-  \thispagestyle{empty}
-  \raggedright
-  \setstretch{1.2}
-  \normalsize\tableofcontents
-\end{titlepage}
+%   \vspace{\fill}
+%   \thispagestyle{empty}
+%   \raggedright
+%   \setstretch{1.2}
+%   \normalsize\tableofcontents
+% \end{titlepage}
 
 \defaultLineSpace    		%%% Line spacing
 
@@ -63,9 +63,9 @@
   \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
   \caption{Pair-wise comparison of \textit{G.~gallus} chromosome~18 and \textit{M.~gallopavo} chromosome~20.
   (a)~Smash++, with $k=14$ and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
-  (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight of~18692. Reverse complements are shown in lower level;
+  (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight $=18692$. Reverse complements are shown in lower level;
   (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in~situ hybridization} (FISH) analysis. The box shows a local rearrangement;
-  (d)~SynBrowser~\cite{lee2016synteny}, with the resolution --minimum size of a reference block-- of 150~Kb;
+  (d)~SynBrowser~\cite{lee2016synteny}, with the resolution $=150~Kb$ (minimum size of a reference block);
   (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
   \label{fig.supp.GGA18.MGA20}
 \end{figure}
@@ -76,7 +76,7 @@
 %   \centering
 %   \includegraphics[width=.85\linewidth]{fig/GGA14_MGA16.pdf}
 %   \caption{\textit{G.~gallus} chromosome~14 compared to \textit{M.~gallopavo} chromosome~16.
-%    (a)~Smash++, employing an FCM and an STMM with k=14 and~5, respectively. The blocks smaller than 400~Kb are discarded;
+%    (a)~Smash++, employing an FCM and an STMM with $k=14$ and~5, respectively. The blocks smaller than 400~Kb are discarded;
 %    (b)~progressiveMauve, with LCB weight of~27424;
 %    (c)~adopted from \cite{zhang2011comparative}. The box shows an inversion rearrangement; 
 %    (d)~SynBrowser, with the resolution of 150~Kb.
