--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -56,19 +56,19 @@
 
 \defaultLineSpace    		%%% Line spacing
 
-\clearpage
-\section{GGA 18 compared to MGA 20}
-\begin{figure}[!h]
-  \centering
-  \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
-  \caption{Pair-wise comparison of \textit{G.~gallus} chromosome~18 and \textit{M.~gallopavo} chromosome~20.
-  (a)~Smash++, with $k=14$ and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
-  (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight $=18692$. Reverse complements are shown in lower level;
-  (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in~situ hybridization} (FISH) analysis. The box shows a local rearrangement;
-  (d)~SynBrowser~\cite{lee2016synteny}, with the resolution $=150~Kb$ (minimum size of a reference block);
-  (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
-  \label{fig.supp.GGA18.MGA20}
-\end{figure}
+% \clearpage
+% \section{GGA 18 compared to MGA 20}
+% \begin{figure}[!h]
+%   \centering
+%   \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
+%   \caption{Pair-wise comparison of \textit{G.~gallus} chromosome~18 and \textit{M.~gallopavo} chromosome~20.
+%   (a)~Smash++, with $k=14$ and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
+%   (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight of~18692. Reverse complements are shown in lower level;
+%   (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in~situ hybridization} (FISH) analysis. The box shows a local rearrangement;
+%   (d)~SynBrowser~\cite{lee2016synteny}, with the resolution of~150~Kb (minimum size of a reference block);
+%   (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
+%   \label{fig.supp.GGA18.MGA20}
+% \end{figure}
 
 % \clearpage
 % \section{GGA 14 compared to MGA 16}
@@ -79,7 +79,7 @@
 %    (a)~Smash++, employing an FCM and an STMM with $k=14$ and~5, respectively. The blocks smaller than 400~Kb are discarded;
 %    (b)~progressiveMauve, with LCB weight of~27424;
 %    (c)~adopted from \cite{zhang2011comparative}. The box shows an inversion rearrangement; 
-%    (d)~SynBrowser, with the resolution of 150~Kb.
+%    (d)~SynBrowser, with the resolution of~150~Kb.
 %   }
 %   \label{fig.supp.GGA14.MGA16}
 % \end{figure}
@@ -90,29 +90,29 @@
 %   \centering
 %   \includegraphics[width=.75\linewidth]{fig/HS12_PT12.pdf}
 %   \caption{Comparison of \textit{H.~sapiens} chromosome~12 and \textit{P.~troglodytes} chromosome~12.
-%    (a)~Smash++, with k=14 used by an FCM. The blocks smaller than 100~Kb are discarded;
+%    (a)~Smash++, with $k=14$ used by an FCM. The blocks smaller than 100~Kb are discarded;
 %    (b)~progressiveMauve, with LCB weight of~55186;
-%    (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block$=$1~Kb, maximum gap between adjacent markers$=$5~Mb and minimum number of markers$=$1;
-%    (d)~SynBrowser, with the resolution of 150~Kb;
+%    (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block $=1~$Kb, maximum gap between adjacent markers $=5~$Mb and minimum number of markers $=1$;
+%    (d)~SynBrowser, with the resolution of~150~Kb;
 %    (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
 %   }
 %   \label{fig.supp.HS12.PT12}
 % \end{figure}
 
-% \clearpage
-% \section{PXO99A compared to MAFF 311018}
-% \begin{figure}[!h]
-%   \centering
-%   \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
-%     \caption{Pair-wise comparison of PXO99A and MAFF 311018.
-%      (a)~Smash++, with k=13 used by an FCM. The blocks smaller than 10~Kb are discarded. In order to make the figure clearer, the shaded paths for connecting corresponding regions are not drawn;
-%     %  (b)~progressiveMauve, with LCB weight of~55186;
-%     %  (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block$=$1~Kb, maximum gap between adjacent markers$=$5~Mb and minimum number of markers$=$1;
-%     %  (d)~SynBrowser, with the resolution of 150~Kb;
-%     %  (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
-%     }
-%     \label{fig.supp.PXO99A.MAFF_311018}
-% \end{figure}
+\clearpage
+\section{PXO99A compared to MAFF 311018}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
+    \caption{Pair-wise comparison of PXO99A and MAFF 311018.
+     (a)~Smash++, with k=13 used by an FCM. The blocks smaller than 10~Kb are discarded. In order to make the figure clearer, the shaded paths for connecting corresponding regions are not drawn;
+    %  (b)~progressiveMauve, with LCB weight of~55186;
+    %  (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block$=$1~Kb, maximum gap between adjacent markers$=$5~Mb and minimum number of markers$=$1;
+    %  (d)~SynBrowser, with the resolution of 150~Kb;
+    %  (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
+    }
+    \label{fig.supp.PXO99A.MAFF_311018}
+\end{figure}
 
 % \clearpage
 % \section{Tool availability and implementation}
