--- a/paper/supp/ref.bib
+++ b/paper/supp/ref.bib
@@ -273,7 +273,7 @@ doi="10.1007/s10618-006-0057-3"
 }
 
 @article{salzberg2008genome,
-  title={Genome sequence and rapid evolution of the rice pathogen \textit{Xanthomonas oryzae} pv. \textit{oryzae} PXO99A},
+  title={Genome sequence and rapid evolution of the rice pathogen \textit{Xanthomonas oryzae} pv. \textit{oryzae} {PXO99A}},
   author={Salzberg, Steven L and Sommer, Daniel D and Schatz, Michael C and Phillippy, Adam M and Rabinowicz, Pablo D and Tsuge, Seiji and Furutani, Ayako and Ochiai, Hirokazu and Delcher, Arthur L and Kelley, David and others},
   journal={BMC genomics},
   volume={9},
