--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -382,7 +382,7 @@ The visualizer provides various options that are described in Table~\ref{tab.opt
 
 
 \subsection{Example}
-This section guides step-by-step employing \smashpp to find and visualize rearrangements in a sample genomic data. Note that the commands can be run on Linux and macOS, however, they are similar in Windows.
+This section guides step-by-step employing \smashpp to find and visualize rearrangements in two sample genomic sequences. Note that the commands can be run on Linux and macOS, however, they are similar in Windows.
 
 \subsubsection*{Install \smashpp and provide the required files}
 First, install \smashpp:
@@ -396,9 +396,40 @@ Then, copy \mono{smashpp} executable file into \mono{example/} directory and go 
 cp smashpp example/
 cd example/
 \end{code}
-There is a 1000 byte reference sequence, named \mono{refs}, and a 1000 byte target sequence, named \mono{tars}, in this directory. Running
+There is a 1000 byte reference sequence, named \mono{ref}, as the following:
+\begin{verbatim}
+GCGCCTTGATTCCGTTCGAGACGGATCAGACACTGTTCCAAACGGAGATTCCAGGGAGACCTTTTTAACGTACGCGGCAAGGGTC
+AGGGGTTGTTCGAGAGATCTTAATTTCGGCTACCATCCACTAGCTCTTACTTGTTCGATCGTGTAAAAGGAGACCCCTCCCCCAA
+AACAGCCACCCGCGCATTAAAGGAAACCCGCCTTGCGTAATGCGCTCGCCCATGCTTGTCCATCACGTCTTCGCTACCGGGGTGA
+TACCCCGCGATGAATGCACCGAAGAAATTGATGCACTGGGTGCTGTCACCTACCCTTGCGAAGATATTTACTCCACCGCGTCGAG
+TTGGCCTCTAGTCAACTACTTCTGAGTGTTGGTTTCTGGAACTCGAGCATAAAAGCGGTGCGCGTACTCCCGGCAGGCACCCCGT
+TGCGCGATAGTATGCAAAGGCCCGCGTGTGCCCCCAAGGCGGTGCACGAGGTCTCGGACGTCGCGACGGACCGATCAGTTAACAG
+TTACACACAGATGGATTTAAACCTAAAAGATGATTACACCCAGAGGTGAAATGTAACGTTCTGGTATTGGGTTCAGTTCATGTGC
+AGTGCACTGGGAAAATTCCTTAAACCGAGGGTGGCCTGACCTGCTGCTTGGGTTTTCACAGGTTGGGTACCCAGCAAAGTGCAGG
+CCTCTATCTGAGCTGGCATTTGGGTGCACGCACCTCCTATAATAACGGAGGAACTAAAACTCGCTCGACTCTAATGCTAATCCTA
+CGCGCTTTATCATAGGGCTTCCAAGCAAGACTGGGTGGGGATATCAATTTGAGATATGCTATCGGGCAAATAAAACCCAACGCAG
+TAAGACGTCTATTTTACGTTTGTCCTTAAGTTTTCTATGGTTGGGGTAAGTCTATGGCTTAAGATTCACCTAATTACAAATTCGA
+CAGTTCTAATTTAAAAGGAACGTGGGTCAGACGCTTGGTTCGACCGGTATACATATCTAGGGTAT
+\end{verbatim}
+and a 1000 byte target sequence, named \mono{tar}, in this directory:
+
+\begin{verbatim}
+GGTGATACCCCGCGATGAATGCACCGAAGAAATTGATGCACTGGGTGCTGTCACCTACCCTTGCGAAGATATTTACTCCACCGCG
+TCGAGTTGGCCTCTAGTCAACTACTTCTGAGTGTTGGTTTCTGGAACTCGAGCATAAAAGCGGTGCGCGTTCTCCCGTCAGGCAC
+CCCGTTGCGCGATAGTATGCAAAGGCCCGCGTGTGCCCCCGAGGCGGTGCACGAGGTCTCGGACGTCGCGACGGACCGATCGGTA
+GCGAAGACGTGATGGACAAGCATGGGCGAGCGCATTACGCAAGGCGGGTTTCCTTTAATGCGCGGGTGGCTGTTTTGGGGGAGGG
+GTCTCCTTTTACACGATCGAACAAGTAAGAGCTAGTGGATGGTAGCCGAAATTAAGATCTCTCGAACAACCCCTGACCCTTGCCG
+CGTACGTTAAAAAGGTCTCCCTGGAATCTCCGTTTGGAACAGTGTCTGATCCGTCTCGAACGGAATCAAGGCGCCTACCCTAGAT
+ATGTATACCGGTCGAACCAAGCGTCTGACCCACGTTCCTTTTAAATTAGAACTGTCGAATTTGTAATTAGGTGAATCTTAAGCCA
+TAGACTTACCCCAACCATAGAAAACTTAAGGACAAACGTAAAATAGACGTCTTACTGCGTTGGGTTTTATTTGCCCGATAGCATA
+TCTCAAATTGATATCCCCACCCAGTCTTGCTTGGAAGCCCTATGATAAAGCGCGTAGGATTAGCATTAGACAGTTAACAGTTACA
+CACAGATGGATTTAAACCTAAAAGATGATTACACCCAGAGGTGAAATGTAACGTTCTGGTATTGGGTTCAGTTCATGTGCAGTGC
+ACTGGGAAAATTCCTTAAACCGAGGGTGGCCTGACCTGCTGCTTGGGTTTTCACAGGTTGGGTACCCAGCAAAGTGCAGGCCTCT
+ATCTGAGCTGGCATTTGGGTGCACGCACCTCCTATAATAACGGAGGAACTAAAACTCGCTCGACT
+\end{verbatim}
+Running
 \begin{code}[style=bash]
-./smashpp -r refs -t tars -f 45 -l 3
+./smashpp -r ref -t tar -f 45 -l 3
 ./smashpp -viz -p 1 -s 50 -w 15 refs.tars.pos
 \end{code}
 results in Fig.~\ref{fig.example}, which has been saved as ``map.svg''.
