--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -434,11 +434,11 @@ Running
 \end{code}
 results in Fig.~\ref{fig.example}, which has been saved as ``map.svg''.
 
-% \begin{figure}[!h]
-%   \includegraphics[width=.95\linewidth]{fig/example.pdf}
-%   \caption{An example of running \smashpp on two 1000 base sequences. Two similar regions in regular mode and two similar ones in inverted mode are detected.}
-%   \label{fig.example}
-% \end{figure}
+\begin{figure}[!h]
+  \includegraphics[width=.95\linewidth]{fig/example.pdf}
+  \caption{An example of running \smashpp on two 1000 base sequences. Two similar regions in regular mode and two similar ones in inverted mode are detected.}
+  \label{fig.example}
+\end{figure}
 
 \clearpage
 %\balance
