--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -398,47 +398,48 @@ cd example/
 \end{code}
 There is a 1000 byte reference sequence, named \mono{ref}, as the following:
 \begin{verbatim}
-GCGCCTTGATTCCGTTCGAGACGGATCAGACACTGTTCCAAACGGAGATTCCAGGGAGACCTTTTTAACGTACGCGGCAAGGGTC
-AGGGGTTGTTCGAGAGATCTTAATTTCGGCTACCATCCACTAGCTCTTACTTGTTCGATCGTGTAAAAGGAGACCCCTCCCCCAA
-AACAGCCACCCGCGCATTAAAGGAAACCCGCCTTGCGTAATGCGCTCGCCCATGCTTGTCCATCACGTCTTCGCTACCGGGGTGA
-TACCCCGCGATGAATGCACCGAAGAAATTGATGCACTGGGTGCTGTCACCTACCCTTGCGAAGATATTTACTCCACCGCGTCGAG
-TTGGCCTCTAGTCAACTACTTCTGAGTGTTGGTTTCTGGAACTCGAGCATAAAAGCGGTGCGCGTACTCCCGGCAGGCACCCCGT
-TGCGCGATAGTATGCAAAGGCCCGCGTGTGCCCCCAAGGCGGTGCACGAGGTCTCGGACGTCGCGACGGACCGATCAGTTAACAG
-TTACACACAGATGGATTTAAACCTAAAAGATGATTACACCCAGAGGTGAAATGTAACGTTCTGGTATTGGGTTCAGTTCATGTGC
-AGTGCACTGGGAAAATTCCTTAAACCGAGGGTGGCCTGACCTGCTGCTTGGGTTTTCACAGGTTGGGTACCCAGCAAAGTGCAGG
-CCTCTATCTGAGCTGGCATTTGGGTGCACGCACCTCCTATAATAACGGAGGAACTAAAACTCGCTCGACTCTAATGCTAATCCTA
-CGCGCTTTATCATAGGGCTTCCAAGCAAGACTGGGTGGGGATATCAATTTGAGATATGCTATCGGGCAAATAAAACCCAACGCAG
-TAAGACGTCTATTTTACGTTTGTCCTTAAGTTTTCTATGGTTGGGGTAAGTCTATGGCTTAAGATTCACCTAATTACAAATTCGA
-CAGTTCTAATTTAAAAGGAACGTGGGTCAGACGCTTGGTTCGACCGGTATACATATCTAGGGTAT
+TCCCGGTCTTTTAGCGGCCAGGGGCCTGGGCTGTATATCGAAAAGTAATATCCCTTTATGCACCGACCGTAATTATGGACAGCAC
+ATATACATTATGAGATTTAAAGATCGCGTGGACGACCACGCGGGCTTATAGCCTCACCTGAGGAAGGGGGTGCCTGCGAGGGAGC
+TTGAACCTGTAGCCCCAATCTCGAACGACCTGAGGCTTGTGTGGTCAGAGTTGTGACCAGAGCGATCCCGTTGTCAAATCAACCT
+AGAGGAGAGGTAAGGGATACGGGTTACATCTCTCCGCTCAGATTGCTCCTATCGGTAGGAAATATCGGGGATAACCCAATACAAA
+ACGCTGAACTGTTCATATTTAGCAAGAAGGGGGGACCGAGGAGCTAAATCAGGGACTATGTAAAATTAGAGTTCTAAGGATAGTA
+GCACCCGCGCATGGATCGAACTCCGCCTTGGTTGGGTGTGGATGCCATTGGCGTCACCGTGCTGATAGCCAAATCCCTAGTGAAG
+GTAACGTGCGGCCAATTAAATAGTAACTGGGCGTAGATTCTAGCGGTGGCCTCATACGGCACCAATGTCCATCCTCCCTGTGCCT
+AACACTATAACTCCAATCCCGTGAGTCTACCATCGCCGAGAATCAGACGGGCAACAAACCCAGGGAGCGAGAGCTACGCGGCTTA
+TATCACGGATGCTTCCCCACCTAGGGAAATTTGTTCCGCCTAATCCCGTCCTTCGCTGGTCAGGCCCGGTCTAGCGGATTACTTC
+GCCGGTAATGCAGTACAGAATAAATGAAATTCATTAAGAGAATGAAAGGTTATCAGCGAAGCCTTAAGGTCCAACAAGACGTCGA
+TATTCTGAAGTAAACTGGTTGACATGTGTGTAACATGAAGCACGCGCTTATTGATATTATCCGCAACCCCACGGCTGGCGGGAAT
+CAACCGGCGTCCAGTTCGAACAAGACAGTGCGCTACGCATTACGAAATAGGCTTCGTGTTGCTGT
 \end{verbatim}
 and a 1000 byte target sequence, named \mono{tar}, in this directory:
-
 \begin{verbatim}
-GGTGATACCCCGCGATGAATGCACCGAAGAAATTGATGCACTGGGTGCTGTCACCTACCCTTGCGAAGATATTTACTCCACCGCG
-TCGAGTTGGCCTCTAGTCAACTACTTCTGAGTGTTGGTTTCTGGAACTCGAGCATAAAAGCGGTGCGCGTTCTCCCGTCAGGCAC
-CCCGTTGCGCGATAGTATGCAAAGGCCCGCGTGTGCCCCCGAGGCGGTGCACGAGGTCTCGGACGTCGCGACGGACCGATCGGTA
-GCGAAGACGTGATGGACAAGCATGGGCGAGCGCATTACGCAAGGCGGGTTTCCTTTAATGCGCGGGTGGCTGTTTTGGGGGAGGG
-GTCTCCTTTTACACGATCGAACAAGTAAGAGCTAGTGGATGGTAGCCGAAATTAAGATCTCTCGAACAACCCCTGACCCTTGCCG
-CGTACGTTAAAAAGGTCTCCCTGGAATCTCCGTTTGGAACAGTGTCTGATCCGTCTCGAACGGAATCAAGGCGCCTACCCTAGAT
-ATGTATACCGGTCGAACCAAGCGTCTGACCCACGTTCCTTTTAAATTAGAACTGTCGAATTTGTAATTAGGTGAATCTTAAGCCA
-TAGACTTACCCCAACCATAGAAAACTTAAGGACAAACGTAAAATAGACGTCTTACTGCGTTGGGTTTTATTTGCCCGATAGCATA
-TCTCAAATTGATATCCCCACCCAGTCTTGCTTGGAAGCCCTATGATAAAGCGCGTAGGATTAGCATTAGACAGTTAACAGTTACA
-CACAGATGGATTTAAACCTAAAAGATGATTACACCCAGAGGTGAAATGTAACGTTCTGGTATTGGGTTCAGTTCATGTGCAGTGC
-ACTGGGAAAATTCCTTAAACCGAGGGTGGCCTGACCTGCTGCTTGGGTTTTCACAGGTTGGGTACCCAGCAAAGTGCAGGCCTCT
-ATCTGAGCTGGCATTTGGGTGCACGCACCTCCTATAATAACGGAGGAACTAAAACTCGCTCGACT
+CAGCAACACGAAGCCTATTTCGTAATGCGTAGCGCACTGTCTTGTTCGAACTGGACGCCGGTTGATTCCCGCCAGCCGTGGGGTT
+GCGGATAATATCAATAAGCGCGTGCTTCATGTTACACACATGTCAACCAGTTTACTTCAGAATATCGACGTCTTGTTGGACCTTA
+AGGCTTCGCTGATAACCTTTCATTCTCTTAATGAATTTCATTTATTCTGTACTGCATTACCGGCGAAGTAATCCGCTAGACCGGG
+CCTGACCAGCGAAGGACGGGATTAGGCGGAACAAATTTCCCTAGGTGGGGAAGCATCCGTGATATAAGCCGCGTAGCTCTCGCTC
+CCTGGGTTTGTTGCCCGTCTGATTCTCGGCGATGGTAGACTCACGGGATTGGAGTTATAGTGTTAGGCACAGGGAGGATGGACAT
+TGGTGCCGTATGAGGCCACCGCTAGAATCTACGCCCAGTTACTATTTAATTGGCCGCACGTTACCTTCACTAGGATCCCGGTCTT
+TTAGCGGCCAGGGGCCTGGGCTGTATATCGAAAAGTAATATCCCTTTATGCACCGACCGTAATTATGGACAGCACATATACATTA
+TGAGATTTAAAGATCGCGTGGACGACCACGCGGGCTTATAGCCTCACCTGAGGAAGGGGGGGCCTGCGAGGGAGCTTGAACCTGT
+AGCCCCAATCTCGAACGACCTGAGGCTTGTGTGGTCAGAGTGGTGACCAGAGCGATCCCGTTGTCAAATCAACCTAGAGGAGAGG
+TAAGGGATACGGGTTACATCTCTCCGCTCAGATTGCTCCTATCGGTAGGAAATATCGGGGATAACCCAATACAAAACGCTGAACT
+GTTCATATTTAGTAAGAACGGGTGACCGAGGAGCTAAATCAGGGACTATGTAAAATTAGAGATCTAAGGATAGTAGCACCCGCGC
+ATGGATCGAACTCCGCCATGGTTTGGTGTCGATGCCATTGGCGTCACCGTGCTGATAGCCAAATC
 \end{verbatim}
 Running
+{\color{red}{
 \begin{code}[style=bash]
-./smashpp -r ref -t tar -f 45 -l 3
-./smashpp -viz -p 1 -s 50 -w 15 refs.tars.pos
+./smashpp -d 1 -dp -fs S -l 3 -r ref -t tar
+./smashpp -viz -vv -o example.svg ref.tar.pos
 \end{code}
-results in Fig.~\ref{fig.example}, which has been saved as ``map.svg''.
+results in Fig.~\ref{fig.example}.
 
 \begin{figure}[!h]
-  \includegraphics[width=.95\linewidth]{fig/example.pdf}
-  \caption{An example of running \smashpp on two 1000 base sequences. Two similar regions in regular mode and two similar ones in inverted mode are detected.}
+  % \includegraphics[width=.95\linewidth]{fig/example.pdf}
+  \caption{An example of running \smashpp on two 1000 base sequences. (a) the position file and (b) output of the visualizer. One similar region in regular mode and another similar region in inverted mode are detected.}
   \label{fig.example}
 \end{figure}
+}}
 
 \clearpage
 %\balance
